Name:                game-new
Version:             0.1
Synopsis:            Project Synopsis Here
Description:         Project Description Here
License:             AllRightsReserved
Author:              Author
Maintainer:          maintainer@example.com
Stability:           Experimental
Category:            Web
Build-type:          Simple
Cabal-version:       >=1.2

Flag development
  Description: Whether to build the server in development (interpreted) mode
  Default: False

Executable game-new
  hs-source-dirs: src
  main-is: Main.hs
  Extensions: DoAndIfThenElse, ViewPatterns, ScopedTypeVariables, EmptyDataDecls

  Build-depends:
    base >= 4 && < 5,
    bytestring >= 0.9.1 && < 0.10,
    recursion-schemes,
    hssqlppp,
    pretty,
    deepseq,
    lens,
    heist >= 0.8,
    MonadCatchIO-transformers >= 0.2.1 && < 0.4,
    mtl >= 2 && < 3,
    snap == 0.10.*,
    snap-core   == 0.9.*,
    snap-server == 0.9.*,
    snap-loader-static == 0.9.*,
    text >= 0.11 && < 0.12,
    time >= 1.1 && < 1.5,
    xmlhtml >= 0.1,
    cereal,
    dataenc,
    directory,
    stm >= 2.4.2,
    unordered-containers,
    CC-delcont,
    zeromq3-haskell,
    parsec,
    containers,
    vector,
    primitive,
    mwc-random,
    HDBC,
    ghc-prim,
    HDBC-postgresql,
    convertible,
    hashable,
    random,
    semigroups,
    pointed,
    regex-base,
    regex-tdfa,
    comonad,
    array,
    data-default,
    template-haskell,
    haskell-src,
    aeson,
    binary,
    QuickCheck,
    attoparsec,
    data-object,
    MonadRandom,
    hslua,
    filepath,
    cryptohash,
    entropy,
    smallcheck,
    base64-bytestring,
    lens-family-core,
    quicklz

  if flag(development)
    build-depends:
      snap-loader-dynamic == 0.9.*
    cpp-options: -DDEVELOPMENT
    -- In development mode, speed is already going to suffer, so skip
    -- the fancy optimization flags.  Additionally, disable all
    -- warnings.  The hint library doesn't give an option to execute
    -- compiled code when there were also warnings, so disabling
    -- warnings allows quicker workflow.
    ghc-options: -threaded -w 
  else
    if impl(ghc >= 6.12.0)
--      ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2 -auto-all -caf-all -auto 
      ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2 
                   -fno-warn-orphans -fno-warn-unused-do-bind -feager-blackholing -fliberate-case -rtsopts 
    else
      ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
                   -fno-warn-orphans
