Name:                game
Version:             0.1
Synopsis:            Project Synopsis Here
Description:         Project Description Here
License:             AllRightsReserved
Author:              Author
Maintainer:          maintainer@example.com
Stability:           Experimental
Category:            Web
Build-type:          Simple
Cabal-version:       >=1.2

Flag development
  Description: Whether to build the server in development (interpreted) mode
  Default: False

Executable game
  hs-source-dirs: src
  main-is: Main.hs

  Build-depends:
    base >= 4 && < 5,
    bytestring >= 0.9.1,
    heist >= 0.5 && < 0.6 ,
    MonadCatchIO-transformers >= 0.2.1,
    mtl >= 2,
    snap == 0.5.*,
    snap-core == 0.5.*,
    snap-server == 0.5.*,
    text >= 0.11,
    time >= 1.1,
    xmlhtml ,
    directory,
    binary >= 0.5,
    TigerHash,
    entropy,
    containers,
    stm,
    parsec,
    deepseq,
    zeromq-haskell >= 0.8,
    unordered-containers,
    convertible,
    aeson,
    HDBC,
    HDBC-postgresql,
    random,
    semigroups,
    pointed,
    regex-base,
    regex-tdfa,
    comonad,
    template-haskell,
    array,
    data-default,
    attoparsec,
    QuickCheck,
    vector,
    data-object,
    filepath,
    hashable,
    smallcheck,
    hslua,
    MonadRandom,
    haskell-src

  extensions: TypeSynonymInstances MultiParamTypeClasses ScopedTypeVariables DoAndIfThenElse NoMonomorphismRestriction ViewPatterns

  if flag(development)
    cpp-options: -DDEVELOPMENT
    build-depends: hint >= 0.3.2 && < 0.4
    -- In development mode, speed is already going to suffer, so skip
    -- the fancy optimization flags.  Additionally, disable all
    -- warnings.  The hint library doesn't give an option to execute
    -- compiled code when there were also warnings, so disabling
    -- warnings allows quicker workflow.
    ghc-options: -threaded -w
  else
    if impl(ghc >= 6.12.0)
      ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
                   -fno-warn-orphans -fno-warn-unused-do-bind
    else
      ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
                   -fno-warn-orphans

