Name:                proxy-new
Version:             0.1
Synopsis:            Project Synopsis Here
Description:         Project Description Here
License:             AllRightsReserved
Author:              Author
Maintainer:          maintainer@example.com
Stability:           Experimental
Category:            Web
Build-type:          Simple
Cabal-version:       >=1.2

Flag development
  Description: Whether to build the server in development (interpreted) mode
  Default: False 

Executable proxy-new
  hs-source-dirs: src
  main-is: Main.hs
  Extensions: DoAndIfThenElse, EmptyDataDecls

  Build-depends:
    base >= 4 && < 5,
    bytestring >= 0.9.1,
    lens, 
    conduit,
    http-conduit,
    heist >= 0.8,
    MonadCatchIO-transformers >= 0.2.1 && < 0.4,
    mtl >= 2 && < 3,
    snap ==0.11.*,
    snap-core   == 0.9.*,
    snap-server == 0.9.*,
    snap-loader-static == 0.9.*,
    text,
    time >= 1.1 && < 1.5,
    xmlhtml >= 0.1,
    vector,
    primitive,
    mwc-random,
    cereal,
    directory,
    stm >= 2.4,
    unordered-containers,
    binary,
    CC-delcont,
    zeromq3-haskell > 0.2,
    parsec,
    containers,
    cryptohash,
    random,
    entropy,
    HDBC,
    HDBC-postgresql,
    convertible,
    hashable,
    http-types,
    semigroups,
    pointed,
    regex-base,
    regex-tdfa,
    comonad,
    array,
    blaze-builder,
    enumerator,
    data-default,
    template-haskell,
    haskell-src,
    aeson,
    lens-family-core,
    QuickCheck,
    http-conduit
--    http-enumerator

  if flag(development)
    build-depends:
      snap-loader-dynamic == 0.9.*
    cpp-options: -DDEVELOPMENT
    -- In development mode, speed is already going to suffer, so skip
    -- the fancy optimization flags.  Additionally, disable all
    -- warnings.  The hint library doesn't give an option to execute
    -- compiled code when there were also warnings, so disabling
    -- warnings allows quicker workflow.
    ghc-options: -threaded -w 
  else
    if impl(ghc >= 6.12.0)
      ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
                   -fno-warn-orphans -fno-warn-unused-do-bind  -fliberate-case -feager-blackholing -rtsopts 
                   
    else
      ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
                   -fno-warn-orphans -rtsopts
