Name:                secureproxy
Version:             0.1
Synopsis:            Project Synopsis Here
Description:         Project Description Here
License:             AllRightsReserved
Author:              Author
Maintainer:          maintainer@example.com
Stability:           Experimental
Category:            Web
Build-type:          Simple
Cabal-version:       >=1.2

Flag development
  Description: Whether to build the server in development (interpreted) mode
  Default: False 

Executable secureproxy
  hs-source-dirs: src
  main-is: Main.hs

  Build-depends:
    aeson,
    base >= 4.3 && < 5,
    convertible >= 1.0,
    directory >= 1.1,
    bytestring >= 0.9.1 && < 0.10,
    heist >= 0.5 && < 0.6,
    MonadCatchIO-transformers >= 0.2.1 && < 0.3,
    mtl >= 2 && < 3,
    snap == 0.5.*,
    snap-core == 0.5.*,
    snap-server == 0.5.*,
    text >= 0.11 && < 0.12,
    time >= 1.1 && < 1.3,
    xmlhtml == 0.1.*,
    containers >= 0.4,
    stm >= 2.2,
    random >= 1.0, 
    parsec >= 3.0,
    QuickCheck >= 2.0,
    binary >= 0.5,
    TigerHash >= 0.2, 
    entropy >= 0.2.1,
    network >= 2.0,
    network-enumerator >= 0.1,
    enumerator >= 0.4,
    http-enumerator, 
    comonad >= 1.1,
    HDBC-postgresql >= 2.2,
    HDBC >= 2.2,
    data-object-yaml >= 0.3,
    data-object >= 0.3,
    syb >= 0.3,
    MaybeT >= 0.1,
    array >= 0.3,
    Useful >= 0.0.6,
    Hipmunk >= 5,
    comonad-transformers >= 2.0,
    http-types >= 0.6.5,
    blaze-builder >= 0.3,
    zeromq-haskell >= 0.8,
    deepseq,
    unordered-containers

  extensions: TypeSynonymInstances MultiParamTypeClasses EmptyDataDecls NoMonomorphismRestriction DoAndIfThenElse

  if flag(development)
    cpp-options: -DDEVELOPMENT
    build-depends: hint >= 0.3.2 && < 0.4
    -- In development mode, speed is already going to suffer, so skip
    -- the fancy optimization flags.  Additionally, disable all
    -- warnings.  The hint library doesn't give an option to execute
    -- compiled code when there were also warnings, so disabling
    -- warnings allows quicker workflow.  -fllvm
    ghc-options: -threaded -w 
  else
    if impl(ghc >= 6.12.0)
      ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2 
                  -fno-warn-orphans -fno-warn-unused-do-bind -rtsopts -fliberate-case -fspec-constr -funfolding-use-threshold=20 -with-rtsopts=-H128m -with-rtsopts=-N2 -rtsopts 
    else
      ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
                   -fno-warn-orphans 

